--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
                     <li data-index="rs-02" data-transition="fade" data-slotamount="default"
                         data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="2000"
                         data-fsmasterspeed="1500">
-                        <!-- MAIN IMAGE --><img src="img/Banner.png" alt="" data-bgposition="center center"
+                        <!-- MAIN IMAGE -->
+<img src="img/Banner.png" alt="" data-bgposition="center center"
                             data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-bgparallax="10"
                             data-no-retina>
                         <!-- LAYER NR. 1 -->
