--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
+  
     <meta name="author" content="MariaRoyy Cosmetics">
     <!-- description -->
 
@@ -190,8 +189,7 @@
                     <li data-index="rs-02" data-transition="fade" data-slotamount="default"
                         data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="2000"
                         data-fsmasterspeed="1500">
-                        <!-- MAIN IMAGE -->
-<img src="img/Banner.png" alt="" data-bgposition="center center"
+                        <!-- MAIN IMAGE --><img src="img/Banner.png" alt="" data-bgposition="center center"
                             data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-bgparallax="10"
                             data-no-retina>
                         <!-- LAYER NR. 1 -->
