--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <section class="no-padding no-transition" id="home">
         <h1 class="display-none" aria-hidden="true">MariaRoyy Cosmetics </h1>
         <div id="revo_main_wrapper" class="rev_slider_wrapper fullwidthbanner-container">
-            <div id="banner-main" class="rev_slider fullwidthabanner" style="" data-version="5.4.1">
+            <div id="banner-main" class="rev_slider fullwidthabanner" style="display:none;" data-version="5.4.1">
                 <ul>
                     <!-- SLIDE 1 -->
                     <li data-index="rs-01" data-transition="fade" data-slotamount="default"
