--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
        </header>
     <!-- end header -->
     <!-- start slider -->
+     <img src="img/Banner.png" alt="" data-bgposition="center center"
+                            data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-bgparallax="10"
+                            data-no-retina>
+    
+    
     <section class="no-padding no-transition" id="home">
         <h1 class="display-none" aria-hidden="true">MariaRoyy Cosmetics </h1>
         <div id="revo_main_wrapper" class="rev_slider_wrapper fullwidthbanner-container">
