--- a/index.html
+++ b/index.html
@@ -130,7 +130,6 @@
                         <img src="img/Banner.png" alt="" data-bgposition="center center"
                             data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-bgparallax="10"
                             data-no-retina>
-                    
                        <!-- LAYER NR. 1 -->
                         <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
                             data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']"
@@ -1202,7 +1201,7 @@
     <!-- equal hieght -->
     <script src="js/jquery.matchHeight-min.js">
     </script>
-    <!-- text-rotate
+    <!-- text-rotate-->
                                                                                                   
     <script src="js/morphext.min.js">
     </script>
