--- a/index.html
+++ b/index.html
@@ -338,6 +338,7 @@
                             Excepteur sint occaecat cupidatat non proident,
                             sunt in culpa qui officia deserunt mollit anim id est laborum.
                             Perspiciatis unde omnis iste natus error sit.</p>
+                         <button style="color: white; background-color: black;" onclick="window.location.href = 'https://square.link/u/CVbsv0Fl';">purchase template</button>
                     </div>
                 </div>
             </div>
